Add draw feature

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Etch</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <button onclick="clickButton()">Clear</button>
+  <button id="clearButton" onclick="clickButton()">Clear</button>
   <div id="container"></div>
   <script type="text/javascript" src="app.js"></script>
 </body>
