--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <button id="clearButton" onclick="deleteCells()">Clear</button>
+  <button id="clearButton" onclick="deleteCells(); promptForSize()">Clear</button>
   <div id="container"></div>
   <script type="text/javascript" src="app.js"></script>
 </body>
