--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <button id="clearButton" onclick="deleteCells(); promptForSize()">Clear</button>
+  <h1>Etch-a-Sketch?</h1>
   <div id="container"></div>
   <script type="text/javascript" src="app.js"></script>
+  <button id="clearButton" onclick="deleteCells(); promptForSize()">Clear</button>
 </body>
 </html>
