Add working grid size drop down

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="container"></div>
   <script type="text/javascript" src="app.js"></script>
   <div id="inputs">
-    <button id="clearButton" onclick="deleteCells(); promptForSize()">Clear</button>
+    <button id="clearButton" onclick="updateGridSize()">Clear</button>
     <select id="gridSize" onchange="updateGridSize()">
       <option value="16">Grid Size</option>
       <option value="16">16 x 16</option>
