Etch-a-Sketch complete

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <title>Etch</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="enjoy-css.css">
+  <link async href="http://fonts.googleapis.com/css?family=Iceland" data-generated="http://enjoycss.com" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <h1>Etch-a-Sketch?</h1>
+  <h1>Div-a-Sketch</h1>
   <div id="container"></div>
   <script type="text/javascript" src="app.js"></script>
   <div id="inputs">
-    <button id="clearButton" onclick="updateGridSize()">Clear</button>
+    <div class="enjoy-css" onclick="updateGridSize()">Clear</div>
     <select id="gridSize" onchange="updateGridSize()">
       <option value="16">Grid Size</option>
       <option value="16">16 x 16</option>
